--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.24"
+futures = "0.3.27"
 rdev = "0.5.2"
-winapi = "0.3.9"
+serenity = "0.11.5"
+sysinfo = "0.28.4"
+tokio = { version = "1.26.0" , features = ["rt-multi-thread"]}
+winapi = { version = "0.3.9", features = ["winuser", "winbase", "fileapi", "winnls", "winnt", "psapi"] }
+
