--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,18 @@
 name = "keylogger"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.24"
-futures = "0.3.27"
-rdev = "0.5.2"
-serenity = "0.11.5"
-sysinfo = "0.28.4"
-tokio = { version = "1.26.0" , features = ["rt-multi-thread"]}
-winapi = { version = "0.3.9", features = ["winuser", "winbase", "fileapi", "winnls", "winnt", "psapi"] }
+base64 = "0.21.2"
+chrono = "0.4.26"
+hash_limette = "0.1.2"
+reqwest = {version = "0.11.18", features = ["json", "multipart", "blocking", "stream"]}
+serde_json = "1.0.105"
+tokio = { version = "1.14.0", features = ["full", "rt"] }
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3.9", features = ["winuser", "winbase", "fileapi", "winreg" , "shlobj", "knownfolders"] }
 
